--- a/ChromaLite/ChromaLite.csproj
+++ b/ChromaLite/ChromaLite.csproj
@@ -36,12 +36,6 @@
     <Reference Include="0Harmony.1.2.0.1">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\IPA\Libs\0Harmony.1.2.0.1.dll</HintPath>
     </Reference>
-    <Reference Include="BSML">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins\BSML.dll</HintPath>
-    </Reference>
-    <Reference Include="BS_Utils">
-      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins\BS_Utils.dll</HintPath>
-    </Reference>
     <Reference Include="HMLib">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\HMLib.dll</HintPath>
     </Reference>
@@ -50,6 +44,9 @@
     </Reference>
     <Reference Include="MainAssembly">
       <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\MainAssembly.dll</HintPath>
+    </Reference>
+    <Reference Include="SongCore">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins\SongCore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -113,7 +110,6 @@
     <Compile Include="ChromaEvents\ChromaNoteScaleEvent.cs" />
     <Compile Include="ChromaEvents\ChromaRotateEvent.cs" />
     <Compile Include="ChromaLiteBehaviour.cs" />
-    <Compile Include="UI\ChromaLiteConfig.cs" />
     <Compile Include="ChromaLiteMapReader.cs" />
     <Compile Include="ChromaLogger.cs" />
     <Compile Include="CLHarmony\LightSwitchEventEffectHandleBeatmapObjectCallbackControllerBeatmapEventDidTrigger.cs" />
@@ -121,13 +117,9 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionUtil.cs" />
-    <Compile Include="UI\ChromaUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="manifest.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="UI\settings.bsml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
