--- a/ChromaLite/ChromaLite.csproj
+++ b/ChromaLite/ChromaLite.csproj
@@ -112,6 +112,7 @@
     <Compile Include="ChromaLiteBehaviour.cs" />
     <Compile Include="ChromaLiteMapReader.cs" />
     <Compile Include="ChromaLogger.cs" />
+    <Compile Include="CLHarmony\ParticleSystemEventEffectHandleBeatmapObjectCallbackControllerBeatmapEventDidTrigger.cs" />
     <Compile Include="CLHarmony\LightSwitchEventEffectHandleBeatmapObjectCallbackControllerBeatmapEventDidTrigger.cs" />
     <Compile Include="ColourManager.cs" />
     <Compile Include="Plugin.cs" />
@@ -122,4 +123,7 @@
     <EmbeddedResource Include="manifest.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "C:\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins\$(TargetName).dll"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
